Исправление ошибок, инициализация исключений

--- a/quiz_gen_django/templates/home.html
+++ b/quiz_gen_django/templates/home.html
@@ -10,7 +10,7 @@
 <form method="post" action="{% url 'generate_quiz' %}">
     {% csrf_token %}
     <input type="text" name="topic" placeholder="Введите тему">
-    <button type="submit">Сгенерировать вопрос</button>
+    <button type="submit">Сгенерировать вопросы</button>
 </form>
 
 {% endblock %}
