--- a/quiz_gen_django/templates/quiz.html
+++ b/quiz_gen_django/templates/quiz.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Сгенерированный Вопрос{% endblock %}
+{% block title %}Сгенерированные вопросы{% endblock %}
 
 {% block content %}
 <h2>Вопросы по теме:</h2>
