--- a/quiz_gen_django/templates/error.html
+++ b/quiz_gen_django/templates/error.html
@@ -9,7 +9,7 @@
 <h3>{{ topic }}</h3>
 
 <div class="generated-questions">
-    <p>{{ question_answer }}</p>
+    <p>{{ question_answers }}</p>
 </div>
 
 <a href="{% url 'home' %}" class="back-button">Назад к форме</a>
