--- a/quiz_gen_django/templates/home.html
+++ b/quiz_gen_django/templates/home.html
@@ -1,16 +1,19 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block title %}Главная{% endblock %}
 
 {% block content %}
-<h2>
-    Введите тему для генерации вопросов:
-</h2>
+<h2>Введите тему для генерации вопросов:</h2>
 
-<form method="post" action="{% url 'generate_quiz' %}">
+<form id="topic-form" method="post" action="{% url 'generate_quiz' %}">
     {% csrf_token %}
-    <input type="text" name="topic" placeholder="Введите тему">
+    <input type="text" name="topic" placeholder="Введите тему" required>
     <button type="submit">Сгенерировать вопросы</button>
 </form>
+{% endblock %}
 
+{% block scripts %}
+<script src="{% static 'js/quiz.js' %}"></script>
 {% endblock %}
