--- a/quiz_gen_django/static/style.css
+++ b/quiz_gen_django/static/style.css
@@ -166,9 +166,9 @@ footer {
 
 /* Стиль для выбранного ответа */
 .answers input[type="radio"]:checked + label {
-    background-color: #c3c3fa;  /* Цвет фона для выбранного ответа */
-    color: #000000;  /* Цвет текста для выбранного */
-    font-weight: 400;
+    background-color: #c3c3fa;
+    color: #000;
+    font-weight: 500;
 }
 
 /* Стиль для подсветки правильных и неправильных ответов */
@@ -180,11 +180,26 @@ footer {
     background-color: #ffcdd2;  /* Красный для неправильного ответа */
 }
 
-/* Стиль для блокировки выбора после проверки */
-input[type="radio"]:disabled + label {
-    color: #aaa;  /* Тусклый цвет для заблокированных вариантов */
-    cursor: not-allowed;
-    background-color: #f5f5f5;  /* Светлый фон для заблокированных */
+/* Стиль для правильных ответов, если был выбран неправильный вариант */
+.answers input[type="radio"]:disabled + label {
+    background-color: #f5f5f5; /* Светлый фон для заблокированных */
+}
+
+.answers label {
+    font-size: 16px;
+    color: #555;
+    padding: 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+    display: block;
+    position: relative;
+    margin-left: 30px; /* Отступ для радиокнопок */
+}
+
+/* Для правильного ответа, если был выбран неправильный вариант */
+.answers label.correct-answer {
+    background-color: rgb(122, 189, 122);
 }
 
 #result {
@@ -193,6 +208,40 @@ input[type="radio"]:disabled + label {
     font-weight: 600;
 }
 
+/* Стили для экрана загрузки */
+#loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; /* Чтобы элементы располагались вертикально */
+    z-index: 9999;
+}
 
+.spinner {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #6a6ab2;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+}
 
+/* Добавим стили для подписи */
+.loading-text {
+    margin-top: 20px;
+    font-size: 18px;
+    color: #6a6ab2;
+    font-weight: bold;
+    text-align: center;
+}
 
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
